cmake_minimum_required(VERSION 3.30)
project(C)

set(CMAKE_C_STANDARD 17)

add_executable(C
    .idea/.gitignore
    .idea/C.iml
    .idea/editor.xml
    .idea/modules.xml
        chuoiXauConDaiNhat.c
        nCk.c
        chuSoGiaiThua.c
        main.c
        QHDduongDiMin.c
        QHDTrom.c
        QHDlichThiDau.c
        max.h
        max.c
        min.c
        min.h
        sacRoBot.c
        suoiAm.c
        Josephus.c
        test.c
        lichThiDauNangCao.c
        Bitwise.c
        nhapSo.c
        LuyThuaNhanh.c
        LuyThuaNhanh.h
        LocPhanTu.c
        LocPhanTu.h
        nhapPhanTu.c
        nhapPhanTu.h
        cmake-build-release/canBacK.c
        ptBac3.c
        sortString.c
        hePhuongTrinh.c
        lamTron.c
        lamTron.h
        linkedList.c
        addEntry.c
        Enum.c
        EnumVD.c

)
